fix: API: ntb.modal close button overlapped by content

--- a/src/Styles/api.css
+++ b/src/Styles/api.css
@@ -48,6 +48,9 @@
         & .view-header-left, .view-actions {
             display: none;
         }
+        & .modal-header-button {
+            z-index: 2; /* fix for modal content overlapping close button */
+        }
         & .modal-content {
             overflow-y: auto;
             .is-phone & {
